@@ -36,14 +36,14 @@
 			required="true" />
 
 		<field
-			id="description"
+			id="menudescription"
 			name="description"
 			type="text"
 			label="Menus_Menu_Description_Label"
 			description="Menus_Menu_Description_Desc"
 			default=""
 			class="inputbox"
-			size="60"
+			size="30"
 			maxlength="255" />
 
 	</fields>
