@@ -125,6 +125,8 @@ CONFIG_SESSION_TIME_DESC=Session Time Desc
 CONFIG_SESSION_TIME_LABEL=Session Time
 CONFIG_SITE_NAME_DESC=Site Name Desc
 CONFIG_SITE_NAME_LABEL=Site Name
+CONFIG_SITENAME_PAGETITLES_DESC=Append the site name to all page titles.
+CONFIG_SITENAME_PAGETITLES_LABEL=Site name in titles?
 CONFIG_SITE_OFFLINE_DESC=Site Offline Desc
 CONFIG_SITE_OFFLINE_LABEL=Site Offline
 CONFIG_TEMP_PATH_DESC=Temp Path Desc
